force-app/main/default/objects/Bundle_Pricebook_Entry__c/Bundle_Pricebook_Entry__c.object-meta.xml
<CustomObject>
    <label>Bundle Pricebook Entry</label>
    <nameField>
        <displayFormat>BPE-{000000}</displayFormat>
        <label>Pricebook Entry Bundle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bundle Pricebook Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>