force-app/main/default/objects/Bundle_Pricebook_Entry__c/fields/Bundle__c.field-meta.xml
<CustomField>
    <fullName>Bundle__c</fullName>
    <label>Bundle</label>
    <referenceTo>Bundle__c</referenceTo>
    <relationshipLabel>Bundle Pricebook Entries</relationshipLabel>
    <relationshipName>Bundle_Pricebook_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>