force-app/main/default/objects/Bundle_Pricebook_Entry__c/fields/List_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Price__c</fullName>
    <description>Marketing price for the bundle in this pricebook</description>
    <label>List Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>