force-app/main/default/objects/Bundle_Pricebook_Entry__c/fields/Order_Builder_Visible__c.field-meta.xml
<CustomField>
    <fullName>Order_Builder_Visible__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This product is directly available in Order Builder.</description>
    <label>Order Builder Visible</label>
    <type>Checkbox</type>
</CustomField>