force-app/main/default/objects/Bundle_Pricebook_Entry__c/fields/Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Bundle Pricebook Entries</relationshipLabel>
    <relationshipName>Bundle_Pricebook_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>